syntax = "proto3";

package com.pms.rttm.proto;

option java_package = "com.pms.rttm.proto";
option java_multiple_files = true;

message RttmErrorEvent {

  string trade_id = 1;       // optional
  string service_name = 2;

  string error_type = 3;     // TECHNICAL / BUSINESS / TIMEOUT / DESERIALIZATION
  string error_message = 4;

  string event_stage = 5;

  int64 event_time = 6;      // epoch millis
}
